--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-tortoise-orm==0.15.4
+tortoise-orm==0.15.5
 aiosqlite==0.10.0
 asyncpg==0.20.0
+aiomysql==0.0.20
 bitstring==3.1.6
 aiodns==2.0.0
 uvloop==0.14.0
