--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -56,11 +56,12 @@ wallet:
   # Default: True
   #auto_receive_on_send=true
 
-  # Maximum number of processes to compute work on. This is only a factor if the work_peers aren't used or working.
-  # Should not be set to more CPUs than you have
+  # Maximum number of processes to compute work locally on.
+  # Local work is only computed if work_peers are not available
+  # Should not be more than # of CPUs, set to 0 to disable local work gen
   # Default: 1
   #max_work_processes=1
 
   # Maximum number of threads to sign blocks on.
-  # Default: 1
+  # Default: 1, minimum: 1
   #max_sign_threads=1
