More instructions for mac users

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ before_script:
   # Clean up
   - rm -rf venv
   # Install requirements
-  - python3 -m pip install --user virtualenv
-  - python3 -m virtualenv venv
+  - /usr/local/bin/python3 -m pip install --user virtualenv
+  - /usr/local/bin/python3 -m virtualenv venv
   - source venv/bin/activate
   - export CC=/usr/local/bin/gcc-9
   - pip install -U -r requirements.txt
