--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,5 @@ tests:
     - appditto_mac
   script: 
     - find . -name "*.py" ! -path "*venv*" -exec python -m py_compile {} \;
-    - python -m unittest test/*.py
+    - python -m unittest discover -s tests -p "*tests.py"
   interruptible: true
