--- a/sample.config.yaml
+++ b/sample.config.yaml
@@ -19,7 +19,7 @@ server:
 
   # The RPC URL of the remote node to connect to
   # Non-wallet RPCs will be routed to this node
-  # Default: http://[::1]:7076 for nano, https://[::1]:7072 for banano
+  # Default: http://[::1]:7076 for nano, http://[::1]:7072 for banano
   #node_rpc_url: https://coolnanonode.com/rpc
 
   # The WebSocket URL of the node to connect to
@@ -29,6 +29,11 @@ server:
 
 # Settings for the pippin wallet
 wallet:
+  # Run in banano mode
+  # If true, the wallet will operate based on the BANANO protocol
+  # Default: false
+  #banano: false
+
   # Preconfigured wallet representative list
   # Only used when accounts are open
   #preconfigured_representatives_banano:
