--- a/.gitignore
+++ b/.gitignore
@@ -107,9 +107,9 @@ venv.bak/
 .mypy_cache/
 
 # Dev DB
-*.db
-*.db-shm
-*.db-wal
+**/*.db
+**/*.db-shm
+**/*.db-wal
 
 # Configuration
-config.yaml
+**/config.yaml
