--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,7 @@ python-dotenv==0.10.3
 python-rapidjson==0.9.1
 nanopy==20.0.0
 aiohttp==3.6.2
-pyyaml==5.1.2
+pyyaml
 pycryptodome==3.9.4
 aiounittest==1.3.1
 websockets==8.1
-setuptools==42.0.2
