--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ aioredlock>=0.3.0
 python-dotenv>=0.10.3
 python-rapidjson>=0.9.1
 #nanopy>=20.0.0
-git+https://github.com/bbedward/nanopy#egg=nanopy
+nanopy @ git+https://github.com/bbedward/nanopy#egg=nanopy
 aiohttp>=3.6.2
 pyyaml
 pycryptodome>=3.9.4
