Revert nanopy change

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ aioredis>=1.3.0
 aioredlock>=0.3.0
 python-dotenv>=0.10.3
 python-rapidjson>=0.9.1
-#nanopy>=20.0.0
-nanopy @ git+https://github.com/bbedward/nanopy#egg=nanopy
+nanopy>=20.0.0
 aiohttp>=3.6.2
 pyyaml
 pycryptodome>=3.9.4
