--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          python -m unittest test/*.py
+          find . -name "*.py" -exec python -m py_compile {} \;
+          python -m unittest discover -s tests -p "*tests.py"
