--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6,3.7,3.8]
+        redis-version: [6]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,6 +22,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.1.0
+        with:
+          redis-version: ${{ matrix.redis-version }}          
       - name: Run tests
         run: |
           find . -name "*.py" -exec python -m py_compile {} \;
