--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiomysql>=0.0.20
 bitstring>=3.1.6
 aiodns>=2.0.0
 aioredis>=1.3.0
-aioredlock>=0.3.0
+aioredlock==0.3.0
 python-dotenv>=0.10.3
 python-rapidjson>=0.9.1
 nanopy>=20.0.0
