--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-dotenv>=0.10.3
 python-rapidjson>=0.9.1
 nanopy>=20.0.0
 aiohttp>=3.6.2
-pyyaml
+pyyaml>=5.3.1
 pycryptodome>=3.9.4
 aiounittest>=1.3.1
 websockets>=8.1
