--- a/kubernetes/banano/deployment.yaml
+++ b/kubernetes/banano/deployment.yaml
@@ -15,7 +15,14 @@ spec:
     spec:
       containers:
       - name: pippin-banano
-        image: bananocoin/pippin:1.1.17
+        image: bananocoin/pippin:1.1.17.1
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 500m
+            memory: 1500Mi
         ports:
         - containerPort: 11338
           name: api
