--- a/kubernetes/nano/deployment.yaml
+++ b/kubernetes/nano/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: pippin-nano
-        image: bananocoin/pippin:1.1.19b1
+        image: bananocoin/pippin:1.1.19
         resources:
           requests:
             cpu: 500m
