--- a/.github/workflows/deploy_dockerhub.yml
+++ b/.github/workflows/deploy_dockerhub.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           export TAG_NAME=${GITHUB_REF#refs/*/}
           export STG_ONE=${TAG_NAME#*v}
-          echo "RELEASE_VER=${{ env.STG_ONE%-release }}" >> $GITHUB_ENV
+          echo "RELEASE_VER=${STG_ONE%-release}" >> $GITHUB_ENV
 
       - name: Login to registry
         uses: actions-hub/docker/login@master
