--- a/kubernetes/banano/configmap.yaml
+++ b/kubernetes/banano/configmap.yaml
@@ -19,12 +19,12 @@ data:
       # The RPC URL of the remote node to connect to
       # Non-wallet RPCs will be routed to this node
       # Default: http://[::1]:7076 for nano, http://[::1]:7072 for banano
-      node_rpc_url: http://banano-node.banano:7072
+      node_rpc_url: http://10.98.0.7:7072
 
       # The WebSocket URL of the node to connect to
       # Optional, but required to receive transactions as they arrive to accounts
       # Default: None
-      node_ws_url: ws://banano-node.banano:7074
+      node_ws_url: ws://10.98.0.7:7074
 
     # Settings for the pippin wallet
     wallet:
