--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ asyncpg>=0.20.0
 aiomysql>=0.0.20
 bitstring>=3.1.6
 aiodns>=2.0.0
-aioredis>=1.3.0
+aioredis>=1.3.1,<2.0.0
 aioredlock==0.3.0
 python-dotenv>=0.10.3
 python-rapidjson>=0.9.1
