Update deployment yamls

--- a/kubernetes/banano/deployment.yaml
+++ b/kubernetes/banano/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           - name: REDIS_DB
             value: "0"
           - name: POSTGRES_HOST
-            value: postgres-ha-postgresql-ha-pgpool.postgres
+            value: postgres.kubegres
           - name: POSTGRES_DB
             valueFrom:
               secretKeyRef:
