--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -27,6 +27,7 @@ RUN go install github.com/go-delve/delve/cmd/dlv@latest && \
   go install github.com/Khan/genqlient@latest && \
   go install -v github.com/ramya-rao-a/go-outline@latest && \
   go install -v golang.org/x/tools/gopls@latest && \
+  go install -v golang.org/x/tools/cmd/goimports@latest && \
   wget https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh  && \
   chmod +x install.sh && \
   ./install.sh -b /usr/local/bin v1.49.0 && \
