--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Install ocl-icd-opencl-dev
+        run: apt-get update && apt-get install -y ocl-icd-opencl-dev
+
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
@@ -34,6 +37,10 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+
+      - name: Run Tests
+        run: |
+          go test -v -parallel 1 $(go list -f '{{.Dir}}/...' -m | xargs)
 
       - name: Build Docker image
         run: |
