--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Test, and Push Docker Image
 
 on:
   push:
@@ -22,13 +22,12 @@ jobs:
         id: get_version
         run: |
           VERSION=${GITHUB_REF##*/}
+          VERSION=${VERSION#v}
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Install ocl-icd-opencl-dev
-        run: apt-get update && apt-get install -y ocl-icd-opencl-dev
+        run: |
+          sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -42,9 +41,13 @@ jobs:
         run: |
           go test -v -parallel 1 $(go list -f '{{.Dir}}/...' -m | xargs)
 
-      - name: Build Docker image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Create Docker Buildx builder
         run: |
-          docker build --build-arg VERSION=${{ env.VERSION }} -t bananocoin/pippin:${{ env.VERSION }} -t bananocoin/pippin:latest .
+          docker buildx create --use --name mybuilder
+          docker buildx inspect --bootstrap
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -52,7 +55,6 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image
+      - name: Build and push Docker image
         run: |
-          docker push bananocoin/pippin:${{ env.VERSION }}
-          docker push bananocoin/pippin:latest
+          docker buildx build --platform linux/amd64,linux/arm64 --build-arg VERSION=${{ env.VERSION }} -t bananocoin/pippin:${{ env.VERSION }} -t bananocoin/pippin:latest --push .
