--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,18 @@ jobs:
         with:
           go-version: 1.22
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Get the version from the tag
         id: get_version
         run: |
@@ -41,20 +53,9 @@ jobs:
         run: |
           go test -v -parallel 1 $(go list -f '{{.Dir}}/...' -m | xargs)
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Create Docker Buildx builder
-        run: |
-          docker buildx create --use --name mybuilder
-          docker buildx inspect --bootstrap
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          docker buildx build --platform linux/amd64,linux/arm64 --build-arg VERSION=${{ env.VERSION }} -t bananocoin/pippin:${{ env.VERSION }} -t bananocoin/pippin:latest --push .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: bananocoin/pippin:latest,bananocoin/pippin:${{ env.VERSION }}
