--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,3 +59,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: bananocoin/pippin:latest,bananocoin/pippin:${{ env.VERSION }}
+          build-args: VERSION=${{ env.VERSION }}
