--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,9 +62,18 @@ jobs:
           tags: bananocoin/pippin:latest,bananocoin/pippin:${{ steps.get_version.outputs.VERSION }}
           build-args: VERSION=${{ steps.get_version.outputs.VERSION }}
 
+      - name: Install ocl-icd-opencl-dev
+        run: apt-get update && apt-get install -y ocl-icd-opencl-dev
+
       - name: Build amd64 binary
         run: |
           GOARCH=amd64 go build -a -ldflags "-s -w -X main.Version=${{ steps.get_version.outputs.VERSION }}" -o pippin-nocl-amd64 ./apps/cli
+        env:
+          GOOS: linux
+
+      - name: Build amd64 opencl binary
+        run: |
+          GOARCH=amd64 go build -tags cl -a -ldflags "-s -w -X main.Version=${{ steps.get_version.outputs.VERSION }}" -o pippin-opencl-amd64 ./apps/cli
         env:
           GOOS: linux
 
@@ -79,6 +88,12 @@ jobs:
         with:
           name: pippin-nocl-amd64
           path: pippin-nocl-amd64
+
+      - name: Upload amd64 opencl binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: pippin-opencl-amd64
+          path: pippin-opencl-amd64
 
       - name: Upload arm64 binary
         uses: actions/upload-artifact@v2
@@ -95,6 +110,12 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: pippin-nocl-amd64
+          path: .
+
+      - name: Download amd6 opencl binary
+        uses: actions/download-artifact@v2
+        with:
+          name: pippin-opencl-amd64
           path: .
 
       - name: Download arm64 binary
@@ -122,6 +143,16 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./pippin-nocl-amd64
           asset_name: pippin-nocl-amd64
+          asset_content_type: application/octet-stream
+
+      - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./pippin-opencl-amd64
+          asset_name: pippin-opencl-amd64
           asset_content_type: application/octet-stream
 
       - name: Upload Release Assets
