--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: 1.22
 
       - name: Install ocl-icd-opencl-dev
-        run: apt-get update && apt-get install -y ocl-icd-opencl-dev
+        run: sudo apt-get update && sudo apt-get install -y ocl-icd-opencl-dev
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
