--- a/kubernetes/wban/deployment.yaml
+++ b/kubernetes/wban/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pippin-banano
-  namespace: pippin
+  namespace: wban-pippin
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: pippin-banano
@@ -31,31 +31,41 @@ spec:
           - name: REDIS_HOST
             value: redis.redis
           - name: REDIS_DB
-            value: "0"
-          - name: POSTGRES_HOST
-            value: pg-pippinban.pippin
-          - name: POSTGRES_DB
-            value: postgres
-          - name: POSTGRES_USER
-            value: postgres
-          - name: POSTGRES_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: banano
-                key: postgres_password
+            value: "16"           
           - name: BPOW_KEY
             valueFrom:
               secretKeyRef:
-                name: banano
+                name: pippin
                 key: bpow_key
-          # - name: BPOW_URL
-          #   value: http://boompow-service.boompow-next:8080/graphql             
         volumeMounts:
-        - name: conf
+        - name: data-volume
           mountPath: /root/PippinData
+        - name: config-volume
+          mountPath: /root/PippinData/config.yaml
+          subPath: config.yaml
           readOnly: true
       volumes:
-      - name: conf
+      - name: data-volume
+        persistentVolumeClaim:
+          claimName: pippin-data-pvc
+      - name: config-volume
         configMap:
           name: pippin-banano
+          items:
+          - key: config.yaml
+            path: config.yaml
           defaultMode: 0755
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pippin-data-pvc
+  namespace: wban-pippin
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: hcloud-volumes
